# rust-tui-dashboard

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  UI_DESIGN.md  config.json
docs/: SPEC_v1.1_Radar_CN.md  SPEC_v1.1_Radar_EN.md  SPEC_v1.1_Radar_TW.md
src/: db.rs  main.rs
