[package]
name = "rust-tui-dashboard"
version = "0.7.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP & API
reqwest = { version = "0.12", features = ["json"] }
yahoo_finance_api = "4.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "macros"] }

# Math
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
